apply plugin: 'com.android.application'
apply plugin: "androidx.navigation.safeargs"

android {
    compileSdk 35
    defaultConfig {
        applicationId "org.d3kad3nt.sunriseClock"
        minSdkVersion 21
        targetSdk 35
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        javaCompileOptions {
            annotationProcessorOptions {
                arguments += [
                        "room.schemaLocation"  : "$projectDir/schemas".toString(),
                        "room.incremental"     : "true",
                        "room.expandProjection": "true"]
            }

        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    buildFeatures {
        viewBinding true
        dataBinding true
    }

    compileOptions {
        coreLibraryDesugaringEnabled true

        sourceCompatibility = 21
        targetCompatibility = 21
    }

    namespace 'org.d3kad3nt.sunriseClock'
}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.jar'])

    // ViewModel and LiveData
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    implementation "androidx.lifecycle:lifecycle-common-java8:2.8.7"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7"

    // Tests
    androidTestImplementation 'androidx.test:runner:1.6.2'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.12.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"

    // Allow use of newer Java Features
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'

}